added ping pong request
