# docs/swagger.json
@@ -4,7 +4,45 @@
         "contact": {}
     },
     "paths": {
-        "/ping": {
+        "/configservice/all": {
+            "get": {
+                "description": "Get all Ping Pong entries",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pingpong"
+                ],
+                "summary": "Get all Ping Pong entries",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.PingPong"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/configservice/ping/": {
             "get": {
                 "description": "Get ping pong health api",
                 "consumes": [
@@ -77,45 +115,7 @@
                 }
             }
         },
-        "/ping/all": {
-            "get": {
-                "description": "Get all Ping Pong entries",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "pingpong"
-                ],
-                "summary": "Get all Ping Pong entries",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.PingPong"
-                            }
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/ping/{id}": {
+        "/configservice/ping/{id}": {
             "get": {
                 "description": "Get ping by ID",
                 "consumes": [
